Edit default map view in JS, fix layout issue for list items and edit appropriate css styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,12 @@ span .navbar-toggler-icon {
     width: 100%;
     height: 50vh;
     margin-bottom: 2rem;
+
+}
+
+ol {
+    list-style-position: inside;
+    margin-left: -43px;
 }
 
 /*contact*/
@@ -367,7 +373,12 @@ footer .btn {
         padding-bottom: 1em;
     }
 
-    .opening-hours-text {
+    #map {
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+
+    .locations-text {
         text-align: center;
     }
 
@@ -421,6 +432,17 @@ footer .btn {
 
 }
 
+@media only screen and (min-width: 560) and (max-width: 599px){
+    #map {
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+    
+    .locations-text {
+        text-align: center;
+    }
+}
+
 @media only screen and (min-width: 600px) and (max-width: 767px) {
     .hero-image {
         width: 95%;
@@ -445,6 +467,15 @@ footer .btn {
 
     #modal {
         padding-top: 2rem;
+    }
+
+    #map {
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+
+    .locations-text {
+        text-align: center;
     }
 }
 
@@ -493,15 +524,15 @@ footer .btn {
     .scents-text {
         padding-bottom: 1em;
     }
-
-    .opening-hours-text {
-        text-align: center;
-        padding-left: 10em;
+    
+    #map {
+        margin-left: 2em;
+        margin-right: 2em;
     }
 
-
-
-
+    .locations-text {
+        text-align: center;
+    }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -527,6 +558,8 @@ footer .btn {
     .store-button {
         font-size: smaller;
     }
+
+
 }
 
 
